# practice

./: dockerfile
CUDA/: CMakeLists.txt  CMakeLists_backup.txt  main.cpp
CUDA/conv2d/: CMakeLists.txt  README.md  conv2d.h
CUDA/conv2d/test/: conv2d_test.cpp
CUDA/gemm/: CMakeLists.txt  cuda_gemm.h  naive_gemm.cu
d2l/: README.md
d2l/08.linear_regression/: naive_linear_regression.py
d2l/09.softmax_regression/: my_softmax_regression.py  naive_softmax_regression.py  softmax_reg.py
d2l/10.multilayer_percetron/: multilayer_percetron.py
deeplearning/: CMakeLists.txt
deeplearning/conv2d/: CMakeLists.txt  naive_conv2d.h  navie_conv2d.cpp
deeplearning/conv2d/test/: CMakeLists.txt
deeplearning/linear_regression/: linear_regression.py
deeplearning/softmax_regression/: naive_softmax_regression.py  softmax_reg.py
